# personal-repo

./: README.md
Whatspp/: getid.py  main.py  worker.py
Whatspp/src/: config.py
algorithm/: eulers.cpp  geometryBig.cpp  grafs.cpp  heap.cpp  heapminmax.cpp  inverses.cpp  k-stat.cpp  litemap.cpp  mergesort.cpp  mindeq.cpp  quicksort.cpp  segmenttree.cpp  sparcetable.cpp
c++-mipt-course/BigInt/: CMakeLists.txt  biginteger.h  main.cpp
c++-mipt-course/deque/: deque.h  deque_test_23.cpp
c++-mipt-course/list/: stackallocator.h  stackallocator_test.cpp
c++-mipt-course/liteString/: .clang-format  CMakeLists.txt  a.out  main.cpp  string.h
c++-mipt-course/shared_ptr/: smart_pointers.h  smart_pointers_test.cpp
console-game/: CMakeLists.txt  command.h  game.h  interface.h  items.h  main.cpp  npc.h  player.h  room.h
console-game/saved/: info.txt
console-game/src/: command.cpp  game.cpp  interface.cpp  items.cpp  npc.cpp  player.cpp  room.cpp
formal-mipt-course/interpreter-paskal/: CMakeLists.txt  Makefile  README.md  driver.cpp  driver.hh  location.hh  main.cpp  parser.cpp  parser.gv  parser.hh  parser.y  scanner.cpp  scanner.l
formal-mipt-course/nka/: nka.h
formal-mipt-course/small-task/: Makefile  README.md  test.cpp
formal-mipt-course/small-task/src/: nka.h
functions/: lib.h
functions/LF/: func.h  object.h
functions/LF/tools/: lib.h  objects.h  range.h  (+1 more)
functions/PF/: func.h  fwd.h  object.h
sudoku/: README.md
sudoku/bot-sudoku/: adapter.py  field.py  game.py  main.py
sudoku/console-sudoku/: commands.py  data.json  field.py  game.py  main.py
(+18 files in other folders)
